--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,7 @@ jobs:
           && mv cyberchef/CyberChef_*.html cyberchef/index.html
 
       - name: Login to GitHub Container Registry
+        if: ${{ steps.is_complete_release.outputs.is_complete_release == 'yes' }}
         uses: docker/login-action@v2
         with:
           registry: ${{ env.CONTAINER_REGISTRY }}
@@ -58,6 +59,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        if: ${{ steps.is_complete_release.outputs.is_complete_release == 'yes' }}
         uses: docker/build-push-action@v4
         with:
           push: true
