--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 env:
   PYTHON_VERSION: 3.11
   CONTAINER_REGISTRY: ghcr.io
-  IMAGE_NAME: stevebinary/cyberchef-docker
+  IMAGE_NAME: stevebinary/cyberchef
 
 permissions:
   packages: write
