--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Setup Python ${{ env.PYTHON_VERSION }}
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -53,6 +53,14 @@ jobs:
           && unzip ./cyberchef.zip -d ./cyberchef
           && mv ./cyberchef/CyberChef_*.html ./cyberchef/index.html
 
+      - name: Set up QEMU
+        if: ${{ steps.is_complete_release.outputs.is_complete_release == 'yes' }}
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        if: ${{ steps.is_complete_release.outputs.is_complete_release == 'yes' }}
+        uses: docker/setup-buildx-action@v2
+
       - name: Login to GitHub Container Registry
         if: ${{ steps.is_complete_release.outputs.is_complete_release == 'yes' }}
         uses: docker/login-action@v2
@@ -67,4 +75,4 @@ jobs:
         with:
           push: true
           context: .
-          tags: ${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }}
+          tags: ${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }},${{ env.CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
